@@ -1,6 +1,20 @@
-DIST networkmanagement-0.9.0.4.tar.bz2 1296488 SHA256 520d0592171ce1aa1c54916f408e7f2d1e016da0acefc725f7170b67a292e256 SHA512 43c2984b194230c5c5f738c3d8c8a1b348c3de5e3ad02c34bfb8095c34cd307b8360a2cb66a0bcedf0566c97dea02aa6d905b2e390f65a935c39d1610f5b1cd3 WHIRLPOOL f74064e954ece7ec5166fa0ec3975b02924689d9e288e67174b71849379486247a92502f39cb2cd7963d88d06879a2b8a1adf48ae907a0d94b464654a43166ae
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST networkmanagement-0.9.0.5.tar.bz2 1303866 SHA256 aa7a467f1f2a0e1ad22486381284bfb1350d644d5fcf61f8449c475dbec963eb SHA512 e8d7e74a06933f9ae5c7ff7c29a3fcd80dcb6e9055bb72afb24b98457ca095c2902b698a0c303db66ce871a378cbbb3eaca68bee41d43ef2cec3a491ceab302e WHIRLPOOL afe81e0363302dc4ab271651fba024319eeeb2875fe896da8cf0f891cb834a85420118aa9760b2bea4ce2120c7673368f686c4b35a69740ff38b606645be5de4
-EBUILD networkmanagement-0.9.0.4.ebuild 829 SHA256 ae72597fa60ced4cf4fe622dee435a79bcd0ef080eba7580fc3fc61084a3de85 SHA512 7b62eb898a54047697f533d068c4e72278149cc6b6f9cfabfb5be66afe8b728152cbbd9b214f95f1a3c2ab2887f08cf7494ea8caa4d2c110b68ff0c3c0dd8d7e WHIRLPOOL 97c363a105dfcbc211ccd7a507a83383221c7c365ff392cf3d477b59921c306e70dc03c8a26ba5b0c9cace1581556e5986f48b4f5bc19a1eb5dbe7b50e4e32da
+DIST networkmanagement-0.9.0.6.tar.bz2 1328455 SHA256 13fd521abd065117b6bd8091b038d0a7f1270defc24ac501fce54f9c491a4a23 SHA512 fc90f2aabbda9fc54a81fbe5d469be8ff834e70ad58aac4b3535f1fd0451b50bca57136d5307028e7ff493b0908e9f75a996205031da0b8c6c8c3c3d4a480eee WHIRLPOOL 8a73df4de75bc6f845ec23b861bdc8ee30fe4d7c37948ad232143767118d9bed49422ce2288728670345cfc5e60f32f15cf1a5cde1ddc3bf65e8d5458bd011cd
 EBUILD networkmanagement-0.9.0.5.ebuild 794 SHA256 1e8622ab8be1422ed353170f34fd5641d89f497d38fb0575c14dbdf32f298ccd SHA512 39f06fae02ad4270dd8017a011425b35b2b6d6306870a734de8a8484eeead05166e245b35b604b092debad120b25a5de2f761933c2099c449507211bd37e2377 WHIRLPOOL d26ee67f3dee89e1ee798167f0f0ef66c67b7ddf67be21662696bfc0a9a4c359622c49845df7d1c3982722bc3973956e9a26041fd42b975b993c49c310878a4e
-MISC ChangeLog 8450 SHA256 cf149cfbbd933d2eec383cd5de13d7799db5331d7abb9b0857890ff6a433848d SHA512 8c0c92301c0adbc5dbe952de23aa8ce5fc98ef02a9028392284a3596478f78a45d9d9d037a6bf34ab5296d4dd059344e86ddf9551c05f622e3bf5d52f6d2d4cf WHIRLPOOL f3f42d88cdfb7b6ca2a7a1792e7a5b54e48f3f397c940f25898913bf9a670672f0326dc4d739b40d0ce2b4f2a6dcbf1e4c158a631da4661ecc998623f8279de7
+EBUILD networkmanagement-0.9.0.6.ebuild 806 SHA256 4c2243576c326336146d43d2875b052f0691f5fd5dfa29bdea1ea12e07b341de SHA512 21e3c52eb759e7054db9a2096931833f882369dc7fc9b97c8ecf980f6a8c24020732b3e3319cd23a45c16a71c357cbe243fcaa263b9c38419c0be864ca61fe5b WHIRLPOOL d9ab246f1ebdb41e32d7898dc324c3cae83b785ded3ea3b3da768b23b41528ade81325a6585743ba79fef3525ff8f8dd451375f48fd19340a5dd4eae05fdbfbd
+MISC ChangeLog 8672 SHA256 d1543984b82a340fd8ac9c22d0bd8437faee36bdb2fb8aeb1e7783061f7208c7 SHA512 c055d27d639c0c07abb113a9681e7d2b44f1dab047b391de541d024435f56ddd444a3980754757178df83cfd8019e04f32fd5310e5aca469a9f479d3dbfb93ee WHIRLPOOL 7f013dc2791d7d8d306195ac9bd6fdda77d483ffcbcf447c6f4458c2e2e2afac95e3a2a20245b34eccd2ca2da49590f0a8e9002fffb22804f1b80ac69f759751
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBCAAGBQJQxytwAAoJEMbwO6tnXQ0see8H/0L3quRDjOI5D6idtqINNDTW
+LRdtFv7gjWh6uEdebsQViiSBck11yTc8XYu8zbNL27WdHRaexuIhvKbY+kENbir0
+JpVyt20HNpHXz0k2VteXqrxk+Ff4XedGjG73dhjUMQ+dCRHO7OxcZyf5zoaKl2e3
+nGsKJHVNNxJ8vBt0Xjxc4PC/gVyxCYbsVTFoHf9IpEKWUchxlTD/JWBX4/TgvAPb
+0KfdIk5gTdyNRyHQYsXjYUPDjBbRVJwDfgKm16yyIaYSH6ePlTvCzl3XDIELBYz6
+AiZ+o11fiuAb5gzP//1P7ucTilKRNn+S9pLnFs8reIKVhHYThAvB17A30MoN+fo=
+=JVkD
+-----END PGP SIGNATURE-----
