@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/networkmanagement
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/networkmanagement/ChangeLog,v 1.19 2012/11/07 12:41:49 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/networkmanagement/ChangeLog,v 1.20 2012/12/11 12:49:40 kensington Exp $
+
+*networkmanagement-0.9.0.6 (11 Dec 2012)
+
+  11 Dec 2012; Michael Palimaka <kensington@gentoo.org>
+  +networkmanagement-0.9.0.6.ebuild, -networkmanagement-0.9.0.4.ebuild:
+  Version bump wrt bug #446804. Remove old.
 
   07 Nov 2012; Agostino Sarubbo <ago@gentoo.org>
   networkmanagement-0.9.0.5.ebuild:
